# OxidePHP

./: .gitignore  README.md  composer.json  phpunit.xml
.github/workflows/: tests-on-tag.yml
ext/: Cargo.toml
ext/src/: lib.rs
src/: Oxide.php  Tabula.php
src/Core/: DataFrame.php  GroupedDataFrame.php
src/Drivers/Polars/: PolarsDataFrame.php
src/Drivers/SQLite/: SQLiteDataFrame.php  SQLiteGroupedDataFrame.php
tests/Integration/: SQLiteDataFrameTest.php
tests/Unit/: ArrayDataFrame.php  DataFrameTest.php
