[package]
name = "oxide_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "oxide_native"
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = "0.11"

# Polars v0.44+ usa hashbrown 0.15 y no necesita features nightly
# Esto evita el problema de raw_table_mut
polars = { version = "0.44", features = [
    "lazy",
    "csv",
    "dtype-full",
    "fmt",
    "rows",
    "is_in"
] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1